# osu-api

./: Cargo.toml  README.md
src/: lib.rs
src/api_v1/: api.rs  mod.rs  req.rs
src/api_v1/models/: beatmaps.rs  de.rs  mod.rs  recent.rs
src/api_v2/: api.rs  mod.rs
src/api_v2/models/: beatmap.rs  beatmapset.rs  covers.rs  mod.rs  user.rs
src/util/: v1.rs
