[package]
name = "osu-api"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-only"
authors = ["Avimitin <avimitin@gmail.com>"]
description = "An osu! API wrapper"
documentation = "https://docs.rs/osu-api"
keywords = ["osu", "api"]
readme = "README.md"
repository = "https://github.com/Avimitin/osu-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-builder = "0.11.0"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11.14"
serde = { version = "1.0.138", features = ["derive"]}
serde_json = "1.0.82"
thiserror = "1.0.38"
paste = "1.0.11"
chrono = "0.4.23"
bitflags = "1.3.2"
async-trait = "0.1.62"

[dev-dependencies]
dotenvy = "0.15.6"

[features]
default = ["v2", "util"]
v1 = []
v2 = []
util = []
